task-2/service-backend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-backend
spec:
  selector:
    app: backend
  ports:
    - name: multitool
      protocol: TCP
      port: 80
      targetPort: 80
