task-2/service-frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-frontend
spec:
  selector:
    app: frontend
  ports:
    - name: nginx
      protocol: TCP
      port: 80
      targetPort: 80
