task-2/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:  
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: svc-frontend
              port:
                number: 80
        - path: /api 
          pathType: Prefix
          backend:
            service:
              name: svc-backend
              port:
                number: 80
